kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-diplom-app
  namespace: devops-diplom
  labels:
    app: devops-diplom-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-diplom-app

  template:
    metadata:
      labels:
        app: devops-diplom-app

    spec:
      containers:
        - name: app
          image: ghcr.io/andsuntsov/devops-diplom-app:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
