kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-diplom-app
  namespace: devops-diplom
spec:
  type: ClusterIP

  selector:
    app: devops-diplom-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
